显示搜索结果图标

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 # gitignore
 
 *.DS_Store
-iAppStore/iAppStore.xcodeproj/project.xcworkspace/xcuserdata/mlqq.xcuserdatad/UserInterfaceState.xcuserstate
+xcuserdata/
